2013-09-12  James Hunt  <james.hunt@ubuntu.com>

	* src/Makefile.am: Updated for new check_all_args test.
	* src/procenv.c:
	  - dump(): Ensure correct output ordering.
	  - Added "not implemented" stubs for FreeBSD IPC functions.
	* src/tests/show_compiler_details: Don't hard-code 'gcc' - use 'cc'
	  for maximum portability.

2013-09-11  James Hunt  <james.hunt@ubuntu.com>

	* man/procenv.1:
	  - Added -E/--semaphores option.
	  - Added -M/--message-queues option.
	  - Added -S/--shared-memory option.
	  - Added ref to ipcs(1).
	* src/procenv.c:
	  - Added support for displaying IPC resources (shared memory,
	    semaphores and message queues) under Linux only at this
	    stage.
	  - New utility functions: format_time(), format_perms() and
	    pid_to_name().

2013-08-30  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - show_stat(): Make resilient to failures.
	  - show_linux_mounts(): Show if unable to query major+minor number.
	  - show_bsd_mounts(): Show if unable to query major+minor number.
	  - get_major_minor(): Return a value rather than simply warning on
	    error.

2013-08-28  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - show_network(): Handle bionics lack of getifaddrs().
	  - get_arch(): Don't identify MIPSEL as MIPS.

2013-08-23  James Hunt  <james.hunt@ubuntu.com>

	* TODO: 
	* man/procenv.1:
	  - Added -A/--arguments option.
	  - Updated --mount to include reference to statfs.
	  - Added -N/--network option.
	  - Updated SEE ALSO section.
	* src/procenv.c: 
	  - Added support for BSD/Hurd signals: SIGEMT, SIGINFO, SIGLOST.
	  - usage(): Use colon to separate output types from description for
	    consistency.
	  - is_console(): Enable for FreeBSD/kFreeBSD.
	  - append(): Allocate space if str points to NULL.
	  - appendf(): Allocate space if str points to NULL.
	  - appendva(): Allocate space if str points to NULL.
	  - dump():
	    - Call show_network().