@@ -1,3 +1,15 @@
+2013-09-13  James Hunt  <james.hunt@ubuntu.com>
+
+	* src/tests/check_all_args.in: Added missing test.
+	* src/procenv.c:
+	  - usage():
+	    - Clarify option usage.
+	    - Ensure no wrapping on 80-column devices.
+	  - show_rlimits():
+	    - Enable RLIMIT_RTTIME on Linux.
+	    - Check kernel version and defines for newer limits.
+	* src/procenv.h: Cleanup.
+
 2013-09-12  James Hunt  <james.hunt@ubuntu.com>
 
 	* src/Makefile.am: Updated for new check_all_args test.
